tests/should_pass/import_resource_chain_dep2.fit
resource Widget {
    handle: Int,
    cleanup: drop_widget
}
fn make_widget() -> Widget
fn drop_widget(w: move Widget) -> ()
