tests/should_fail/use_after_move.fit
resource Token {
    id: TokenId,
    cleanup: revoke_token,
}

fn make_token() -> Token
fn consume_token(t: move Token) -> Token

fn test() -> () {
    let t = make_token()
    consume_token(t)
    consume_token(t)
}
